<resources>
    <string name="app_name">Pintia:La leyenda Vaccea</string>
    <string name="Sociales">Redes sociales</string>
    <string name="reliquiario">Lista de Reliquias</string>
    <string name="web">https://pintiavaccea.es</string>
    <string name="facebook">https://www.facebook.com/CEVFW/</string>
    <string name="twitter">https://www.twitter.com/ArchaeoPintia/</string>
    <string name="touch_to_play">Toca cualquier lugar para jugar</string>
    <string name="minesweeper">Pintia: La Leyenda Vaccea</string>
    <string name="easy">Easy</string>
    <string name="button">Button</string>
    <string name="medium">Medium</string>
    <string name="difficult">Difficult</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="start_game">Mapa</string>
    <string name="todo">TODO</string>
    <string name="or">OR</string>
    <string name="make_custom_board">Laboratorio</string>
    <string name="set_up_your_own_board">SET UP YOUR OWN BOARD</string>
    <string name="instrucciones">"Instrucciones del juego"</string>
    <string name="enter_no_of_rows">Enter Rows</string>
    <string name="rows">Rows</string>
    <string name="enter_no_of_columns">Enter Columns</string>
    <string name="columns">Columns</string>
    <string name="enter_no_of_mines">Enter Mines</string>
    <string name="mines">Mines</string>
    <string name="best_time">Best Time</string>
    <string name="restart">Restart</string>
    <string name="timer">Timer</string>
    <string name="difficulty_message">Difficulty Level Not Selected</string>
    <string name="select_difficulty_message">You need to select one of the difficulty levels to start playing the game.</string>
    <string name="hard">Hard</string>
    <string name="_00_00">00:00</string>
    <string name="choice_to_flag_or_to_reveal">Choice-to flag or to reveal</string>
    <string name="romans_left">Romanos:</string>
    <string name="secretos">Secretos:</string>
    <string name="_0">0</string>
    <string name="win_message">Has ganado el juego 😎</string>
    <string name="congratulations">¡¡Enhorabuena!!</string>
    <string name="result">Result</string>
    <string name="lost_message">Perdiste ☹</string>
    <string name="game_loss">Los romanos han conquistado Pintia</string>
    <string name="stats_label">View your stats</string>
    <string name="continue_playing">Volver al menú</string>
    <string name="exit">Exit</string>
    <string name="na">NA</string>
    <string name="best_game_time">Best Game Time</string>
    <string name="last_game_time">Last Game Time</string>
    <string name="games_played">Games Played</string>
    <string name="games_lost">Games Lost</string>
    <string name="games_won">Games Won</string>
    <string name="game_stats">Game Stats</string>

    <string name="mundo1">Mundo 1</string>
    <string name="mundo2">Mundo 2</string>
    <string name="mundo3">Mundo 3</string>
    <string name="dificultad1">Fácil</string>
    <string name="dificultad2">Normal</string>
    <string name="dificultad3">Dificil</string>

    <string name="diego">Diego Capellán Rodríguez</string>
    <string name="dani">Daniel Martínez Álvarez</string>
    <string name="elisa">Elisa Bravo Torres</string>

    <string name="anterior">Anterior</string>
    <string name="Siguiente">Siguiente</string>

    <string name="return_call">return</string>
    <string name="abort">¿Seguro que quieres dejar la partida?</string>
    <string name="exit_game">Salir del juego</string>
</resources>