<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FCFDFD"
    tools:context=".GameWon">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <ImageView
        android:id="@+id/trophy"
        android:layout_width="304dp"
        android:layout_height="224dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trophy" />

        <TextView
            android:id="@+id/game_message"
            android:layout_width="311dp"
            android:layout_height="56dp"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/win_message"
            android:textColor="#9C27B0"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congrats" />

        <TextView
        android:id="@+id/congrats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textColor="#970B0B"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/game_message"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/game_message"
        app:layout_constraintTop_toBottomOf="@+id/trophy" />

    <Button
        android:id="@+id/continue_play"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#C0E3FF"
        android:text="@string/continue_playing"
        android:textColor="#000908"
        app:backgroundTint="#F48F88"
        app:layout_constraintEnd_toEndOf="@+id/game_message"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/game_message"
        app:layout_constraintTop_toBottomOf="@+id/game_message" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>