<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/fondonivele"

    tools:context=".MinesweeperGame">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restart"

        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"

        android:background="@null"

        android:contentDescription="@string/restart"
        android:foreground="@drawable/reiniciar"

        android:scaleType="fitStart"

        app:layout_constraintHorizontal_chainStyle="spread"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@id/guideline"

        app:srcCompat="@drawable/reiniciar"
        />

    <TextView
        android:id="@+id/cuentaAtrasText"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        android:fontFamily="@font/alagard"
        android:text="@string/_00_00"
        android:textColor="#000000"

        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="@+id/timerpic"
        app:layout_constraintStart_toStartOf="@+id/timerpic"


        app:layout_constraintTop_toBottomOf="@+id/timerpic"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/instructions"

        android:layout_width="57dp"
        android:layout_height="62dp"

        android:layout_marginTop="22dp"

        app:layout_constraintHorizontal_bias="0.20"

        android:background="@null"

        android:contentDescription="@string/instrucciones"
        android:foreground="@drawable/informacion"

        android:scaleType="fitStart"

        app:layout_constraintTop_toBottomOf="@id/guideline2"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/choice"

        app:srcCompat="@drawable/informacion"
        />


    <LinearLayout
        android:id="@+id/board"

        android:layout_width="490dp"
        android:layout_height="0dp"

        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="@id/guideline"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        >

    </LinearLayout>

    <ImageView
        android:id="@+id/timerpic"

        android:layout_width="70dp"
        android:layout_height="35dp"

        android:layout_marginTop="50dp"

        android:background="@null"

        android:contentDescription="@string/timer"

        app:layout_constraintTop_toBottomOf="@id/choice"

        app:layout_constraintStart_toStartOf="@id/choice"
        app:layout_constraintEnd_toEndOf="@id/choice"

        app:srcCompat="@drawable/temporizador"
        />

    <TextView
        android:id="@+id/leftmines"

        android:layout_width="88dp"
        android:layout_height="26dp"

        android:layout_marginTop="50dp"

        android:fontFamily="@font/alagard"
        android:text="@string/romans_left"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/instructions"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/timerpic"
        />

    <TextView
        android:id="@+id/secretoTexto"

        android:layout_width="88dp"
        android:layout_height="26dp"

        android:layout_marginTop="50dp"

        android:fontFamily="@font/alagard"
        android:text="@string/secretos"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"


        app:layout_constraintTop_toBottomOf="@id/leftmines"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/timerpic"
        />

    <TextView
        android:id="@+id/secretosRestantes"

        android:layout_width="39dp"
        android:layout_height="31dp"

        android:layout_marginTop="4dp"

        android:fontFamily="@font/alagard"

        android:gravity="center"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@+id/secretoTexto"

        app:layout_constraintStart_toStartOf="@id/secretoTexto"
        app:layout_constraintEnd_toEndOf="@id/secretoTexto"
        />

    <ImageButton
        android:id="@+id/choice"

        android:layout_width="70dp"
        android:layout_height="67dp"

        android:layout_marginTop="22dp"

        app:layout_constraintHorizontal_bias="0.80"

        android:contentDescription="@string/choice_to_flag_or_to_reveal"
        android:scaleType="fitStart"


        app:layout_constraintTop_toBottomOf="@id/guideline2"

        app:layout_constraintStart_toEndOf="@id/instructions"
        app:layout_constraintEnd_toStartOf="@id/guideline"


        app:srcCompat="@drawable/pala"

        tools:layout_editor_absoluteX="108dp"
        />

    <TextView
        android:id="@+id/minesLeftinfo"

        android:layout_width="39dp"
        android:layout_height="31dp"

        android:layout_marginTop="4dp"

        android:fontFamily="@font/alagard"

        android:gravity="center"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@+id/leftmines"

        app:layout_constraintStart_toStartOf="@id/leftmines"
        app:layout_constraintEnd_toEndOf="@id/leftmines"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"

        app:layout_constraintGuide_percent="0.8053528" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        app:layout_constraintGuide_percent="0.31463748" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"

        app:layout_constraintGuide_percent="0.04136253" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"

        app:layout_constraintGuide_percent="0.96107054" />

</androidx.constraintlayout.widget.ConstraintLayout>