<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FCFDFD"
    android:backgroundTint="#40EFEFEF"
    android:fillViewport="true"
    tools:context=".MainActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pantallaInicial"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/pintia"
        android:foreground="#00FFFFFF"

        android:focusedByDefault="true"

        >

        <TextView
            android:id="@+id/gamelabel"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="26dp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="22dp"
            app:layout_constraintHorizontal_bias="0.5"

            android:fontFamily="@font/alagard"
            android:text="@string/minesweeper"
            android:textColor="#000000"
            android:textSize="48sp"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageButton
            android:id="@+id/configuracion"

            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_marginTop="26dp"
            android:layout_marginStart="23dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/gamelabel"

            android:background="@drawable/configuracion"
            />

        <Button
            android:id="@+id/Laboratorio"

            android:layout_width="139dp"
            android:layout_height="55dp"

            android:layout_marginStart="265dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintHorizontal_bias="0.941"

            android:background="#B4FFFFFF"
            app:backgroundTint="#FFFFFF"

            android:fontFamily="@font/alagard"
            android:text="@string/make_custom_board"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@id/toca_para_jugar"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintStart_toEndOf="@+id/twitter"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/toca_para_jugar"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintVertical_bias="0.63"
            app:layout_constraintHorizontal_bias="0.498"

            android:fontFamily="@font/alagard"
            android:text="@string/touch_to_play"
            android:textColor="#000000"
            android:textSize="34sp"

            android:background="#b1a8af"

            app:layout_constraintTop_toTopOf="@id/gamelabel"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageButton
            android:id="@+id/web"

            android:layout_width="70dp"
            android:layout_height="67dp"

            android:layout_marginStart="12dp"

            android:contentDescription="@string/choice_to_flag_or_to_reveal"

            android:scaleType="fitStart"

            app:layout_constraintTop_toBottomOf="@id/toca_para_jugar"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintStart_toStartOf="parent"

            android:background="@color/white"

            app:srcCompat="@drawable/web_box"
            tools:layout_editor_absoluteX="108dp"
            />

        <ImageButton
            android:id="@+id/facebook"

            android:layout_width="70dp"
            android:layout_height="67dp"

            android:contentDescription="@string/choice_to_flag_or_to_reveal"

            android:scaleType="fitStart"

            tools:layout_editor_absoluteX="108dp"

            app:layout_constraintTop_toBottomOf="@id/toca_para_jugar"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintStart_toEndOf="@id/web"

            app:srcCompat="@drawable/facebook"
            android:background="@color/white"

            />

        <ImageButton
            android:id="@+id/twitter"

            android:layout_width="70dp"
            android:layout_height="67dp"

            android:layout_marginEnd="30dp"

            android:contentDescription="@string/choice_to_flag_or_to_reveal"

            android:scaleType="fitStart"

            tools:layout_editor_absoluteX="108dp"

            app:layout_constraintTop_toBottomOf="@id/toca_para_jugar"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/facebook"

            app:srcCompat="@drawable/twitter"
            android:background="@color/white"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>